# mtracker

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: release.yml
completions/: bash  zsh
src/: add.rs  arg_util.rs  args.rs  edit.rs  lib.rs  list.rs  main.rs  media.rs  parse_util.rs  rate.rs  remove.rs  tags.rs  tui.rs  unrate.rs
src/media/: config.rs  format.rs  handle.rs  parser.rs  repo.rs
src/tui/: app.rs  input.rs  render.rs
