[package]
name = "mtracker"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/r-unruh/mtracker"
authors = ["Rudolf Unruh"]
readme = "README.md"
license = "MIT"
keywords = ["movies", "series", "entertainment", "database"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
colored = "2.1.0"
dirs = "5.0.1"
regex = "1.10.4"
