[package]
name = "mtracker"
version = "0.4.0"
edition = "2021"
description = "cli movie tracker - keep track of watched movies and series"
repository = "https://github.com/r-unruh/mtracker"
authors = ["Rudolf Unruh"]
readme = "README.md"
license = "MIT"
keywords = ["movies", "series", "entertainment", "database"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["cargo"] }
colored = "2.1.0"
dirs = "5.0.1"
edit = "0.1.5"
regex = "1.10.4"
tempfile = "3.10.1"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
